posts form in background. resized bg image and fixed bg on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 .site-header {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
   display: flex;
   background-color: rgba(29,29,29,0.70);
   z-index: 100;
@@ -82,19 +83,18 @@
   }
 }
 
-body {
-  position:relative;
-  background: url("./images/DSC_1628.jpg") no-repeat center center fixed;;
+html {
+  background: url("./images/DSC_1628 resized 1250x835.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  width:100%;
-  height:100%;
-  margin:0
+  background-attachment: fixed;
+  height: 100vh;
 }
 
-body:after{
+
+html:after{
   position:fixed;
   content:"";
   top:0;
@@ -314,12 +314,24 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 80px;
+    width: 20%;
   }
 
 input[type=submit]:hover {
     background-color: rgba(29,29,29,0.90);
     transition: background 0.3s ease;
+}
+
+@media only screen and (max-width: 575px) {
+  input[type=submit] {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 900px) and (min-width:575px) {
+  input[type=submit] {
+    width: 30%;
+  }
 }
 
 .contact-form {
@@ -340,6 +352,7 @@ input[type=submit]:hover {
 
 .footer-container {
   align-items: center;
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
   background-color: rgba(29,29,29,0.70);
   bottom: -200px;
   display: flex;
